tests/language_tests/pass/0144_len_array_loop.ee
fn main() {
    let values = [10, 20, 30];
    for let i = 0; i < len(values); i = i + 1 {
        println(values[i]);
    }
}
