tests/language_tests/fail/0090_nested_array_write_non_array.ee
fn main() {
    let values = [1, 2, 3];
    values[0][0] = 9;
}
